# X-VC

./: README.md  pyproject.toml
x_vc/: __init__.py
x_vc/default/: __init__.py  xvc.py  xvc.yaml
x_vc/models/base/: base_dataloader.py  base_datapipes.py  base_trainer.py
x_vc/models/base/fsq/: finite_scalar_quantization.py  residual_fsq.py
x_vc/models/base/loss/: reconstruct.py  ssim.py
x_vc/models/base/modules/: dac.py  ecapa_tdnn.py  fsq_encoder.py  perceiver_encoder.py
x_vc/models/base/modules/dac_utils/: quantize.py
x_vc/models/codec/base/: base_codec_trainer.py
x_vc/models/codec/base/quantizer/: distrib.py  factorized_vector_quantize.py  quantizer_gumbel.py
x_vc/models/codec/sac/: dataloader.py  model.py  trainer.py  utils.py
x_vc/models/codec/sac/blocks/: layers.py  loss.py
x_vc/models/codec/sac/modules/: acoustic_converter.py  acoustic_encoder.py  decoder.py  mel_extractor.py  sampler.py  semantic_encoder.py  speaker_encoder.py  speaker_predictor.py  vocos.py
x_vc/models/codec/sac/modules/utils/: ERes2Net.py  fbank.py
x_vc/models/codec/sac/modules/vocoder/: msstft_discriminator.py  vocos_decoder.py  wave_discriminator.py  wave_generator.py
x_vc/utils/: audio.py  checkpoint.py  commons.py  data_processor.py  file.py  log.py  plot.py  scheduler.py  train_utils.py
